# yandex-messenger-qt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  PUBLISH.md  README-BINARY.md  README.md  copy-to-clone.sh  install.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-release.yml
packaging/: yandex-messenger-qt.desktop  yandex-messenger-qt.desktop.in
src/: app_version.h  autostart_manager.cpp  autostart_manager.h  diagnostics.cpp  diagnostics.h  main.cpp  messenger_window.cpp  messenger_window.h  page_patches.cpp  page_patches.h  single_instance.cpp  single_instance.h  web_popup_window.cpp  web_popup_window.h
